# aos

kernel/src/drivers/serial/: meson-gx-uart.c
projects/aos/: CMakeLists.txt
projects/aos/apps/sosh/src/: sosh.c
projects/aos/apps/tty_test/src/: tty_test.c  ttyout.c
projects/aos/apps/while_true/: CMakeLists.txt
projects/aos/apps/while_true/src/: while_true.c
projects/aos/libclock/include/clock/: clock.h
projects/aos/libclock/src/: clock.c
projects/aos/libsosapi/src/: sos.c  sys_morecore.c  vsyscall.c
projects/aos/sos/: CMakeLists.txt
projects/aos/sos/src/: elf.c  elfload.h  frame_table.c  main.c  network.c  network.h  process.c  process.h  systask.c  systask.h  threads.c  utils.c  utils.h  vmem_layout.h
projects/aos/sos/src/drivers/: timer.c  timer.h
projects/aos/sos/src/fs/: console.c  console.h  fdtable.c  fdtable.h  nfs_api.c  nfs_api.h  read_task.c  read_task.h
projects/aos/sos/src/sys/: morecore.c
projects/aos/sos/src/vm/: addrspace.c  addrspace.h  app_mapping.c  app_mapping.h  paging.c  paging.h
projects/libnfs/: CMakeLists.txt
